test/sema/void-pointer-comparison.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(void* a, void* b) {
	// CHECK: [[@LINE+1]]:11: error: no matching function for call to '==' with argument list of type '(void*, void*)'
    _ = a == b;
}
